LOG - [feature] - cpplog logger added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,10 @@ include_directories(./src)
 add_executable(CAFF_parser
         src/main.cpp
         src/caff/caff.hpp
-        src/caff/caff_parser.cpp)
+        src/caff/caff_parser.cpp
+        src/cpplog.hpp)
 
 add_executable(CIFF_parser
         src/ciff/ciff.cpp
-        src/ciff/ciff.hpp)
+        src/ciff/ciff.hpp
+        src/cpplog.hpp)
