check filename, commandline argumets, replace test files

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 #ignore compiled files
-cmake-build-debug
+cmake-build-debug/
 
 #ignore vscode stuff
 .vscode/
 
 #ignore clion stuff
 .idea/
+
+#ignore compiled stuff
+caff
+ciff
+parser
