--- a/frontend/team0x00-app/package.json
+++ b/frontend/team0x00-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "form-serialize": "^0.7.2",
     "react": "^17.0.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
@@ -38,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   }
 }
