--- a/web-server/config/config.ini
+++ b/web-server/config/config.ini
@@ -4,3 +4,8 @@ SESSION_PERMANENT = True
 SESSION_TYPE = filesystem
 SESSION_FILE_THRESHOLD = 100
 PERMANENT_SESSION_LIFETIME = 60
+
+[MONGO]
+MONGODB_URI = mongodb://admin:admin@mongo:27017/app?authSource=admin&readPreference=primary&ssl=false
+APP_DATABASE = app
+POSTS_COLLECTION = posts
