BE-AUTH - [fix] - Path to user.db moved to config.ini

--- a/web-server/config/config.ini
+++ b/web-server/config/config.ini
@@ -5,6 +5,9 @@ SESSION_TYPE = filesystem
 SESSION_FILE_THRESHOLD = 100
 PERMANENT_SESSION_LIFETIME = 60
 
+[USER]
+USER_DB = users.db
+
 [MONGO]
 MONGODB_URI = mongodb://admin:admin@mongo:27017/app?authSource=admin&readPreference=primary&ssl=false
 APP_DATABASE = app
