--- a/frontend/team0x00-app/package.json
+++ b/frontend/team0x00-app/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "form-serialize": "^0.7.2",
     "react": "^17.0.2",
-    "react-cookie": "^4.0.3",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
@@ -43,5 +43,7 @@
   "devDependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1"
-  }
+  },
+  "proxy": "http://localhost:5000"
+
 }
