BE-USER - [feature] - Admin user created when table is created

--- a/web-server/config/config.ini
+++ b/web-server/config/config.ini
@@ -8,6 +8,10 @@ PERMANENT_SESSION_LIFETIME = 60
 [USER]
 USER_DB = users.db
 
+[USERDB_INIT]
+ADMIN_USERNAME = admin
+ADMIN_PASSWORD = admin
+
 [MONGO]
 MONGODB_URI = mongodb://admin:admin@mongo:27017/app?authSource=admin&readPreference=primary&ssl=false
 APP_DATABASE = app
