BE-CAFF - [fix] - Create upload directory if not exists

--- a/web-server/config/config.ini
+++ b/web-server/config/config.ini
@@ -12,6 +12,9 @@ USER_DB = users.db
 ADMIN_USERNAME = admin
 ADMIN_PASSWORD = admin
 
+[CAFF]
+UPLOAD_FOLDER = media/
+
 [MONGO]
 MONGODB_URI = mongodb://admin:admin@mongo:27017/app?authSource=admin&readPreference=primary&ssl=false
 APP_DATABASE = app
