BE-DEPLOY - [deployment] - Every database and file system database added as a volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - 5000:5000
     volumes:
       - ./web-server/src:/usr/src/app
+      - ./volumes:/opt
 
   mongo:
     image: mongo
