--- a/web-server/config/config.ini
+++ b/web-server/config/config.ini
@@ -1,19 +1,21 @@
 [SESSION]
 SECRET_KEY = This should be a secret
 SESSION_PERMANENT = True
+SESSION_FILE_DIR = /opt/session
 SESSION_TYPE = filesystem
 SESSION_FILE_THRESHOLD = 100
 PERMANENT_SESSION_LIFETIME = 60
 
 [USER]
-USER_DB = users.db
+USER_DB = /opt/users.db
 
 [USERDB_INIT]
 ADMIN_USERNAME = admin
 ADMIN_PASSWORD = admin
 
 [CAFF]
-UPLOAD_FOLDER = media/
+UPLOAD_FOLDER = /opt/media/
+IMAGES_DB = /opt/images.db
 
 [MONGO]
 MONGODB_URI = mongodb://admin:admin@mongo:27017/app?authSource=admin&readPreference=primary&ssl=false
