BE-WEB-SERVER - [feat] - Web-server merged into main

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
       dockerfile: deployment/dev.Dockerfile
     ports:
       - 5000:5000
-
-    # volumes:
-    # - ./web-server/src:/usr/src/app
+    volumes:
+      - ./web-server/src:/usr/src/app
+      - ./volumes:/opt
 
   mongo:
     image: mongo
@@ -23,6 +23,3 @@ services:
       - '27017-27019:27017-27019'
     volumes:
       - ./volumes/mongo:/data/db
-    volumes:
-       - ./web-server/src:/usr/src/app
-
